--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bibbox",
+  "name": "bib-journal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,9 +15,11 @@
     "date-fns": "^4.1.0",
     "dexie": "^4.2.1",
     "gpx-parser-builder": "^1.1.1",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-image-crop": "^11.0.10"
+    "react-image-crop": "^11.0.10",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
