--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.2.1",
+    "firebase": "^12.6.0",
     "gpx-parser-builder": "^1.1.1",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
